# PureRecovery

cmake/modules/: toolchain-arm-none-eabi.cmake
hal/include/hal/: ED028TC1.h  display.h  emmc.h
hal/src/: emmc.c
hal/src/blkdev/: disks.c
hal/src/display/: ED028TC1.c  LUTS.h  display.c
luarecovery/src/: common.c  common.h  lgui.c
platform/: CMakeLists.txt
platform/CMSIS/: MIMXRT1051_features.h
platform/SDK_2_13_0_MIMXRT1051xxxxB-2/: MIMXRT1051xxxxB_manifest_v3_10.xml  SW-Content-Register.txt
platform/SDK_2_13_0_MIMXRT1051xxxxB-2/middleware/usb/include/: usb_misc.h
platform/SDK_2_13_0_MIMXRT1051xxxxB-2/middleware/usb/output/npw/device_config/ehci/: usb_device_config.h  usb_phydcd_config.h
platform/boot/: pin_mux.c  system_MIMXRT1051.c
platform/drivers/sdmmc/src/: fsl_component_generic_list.c  fsl_mmc.c  fsl_os_abstraction_bm.c  fsl_sdmmc_common.c  fsl_sdmmc_host.c  fsl_sdmmc_osa.c
platform/include/drivers/: fsl_cache.h
platform/include/drivers/sdmmc/: fsl_os_abstraction_config.h
products/BellHybrid/hal/: CMakeLists.txt  charger.c  charger.h  system.c
recovery/: CMakeLists.txt  main.c
recovery/usb/mtp/: mtp.c  mtp.h  mtp_file_system_adapter.c  mtp_file_system_adapter.h  mtp_object_handle.c  mtp_operation.c
recovery/usb/vcom/: virtual_com.c  virtual_com.h
